--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-body{
-    background-color:lightblue;
-    text-align:center;
-}
+
 
 h1{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-    font-size:24px;
+    color:red;
 
 }
