--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 *{
     font-family: "Trebuchet MS";
+    color: white;
+}
+
+body{
+    height: vh;
+    width: vw;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 100%;
+    background-color: #181818;
+    background-image: linear-gradient(to bottom, #1f1f1f, #181818 );
+    max-width: 1300px;
+    max-height: 1300px;
 }
 
 
-
-
 .box{
-    height: 70px;
-    width: 100%;
-    padding: 4px;
-    margin: 0px;
+    height: auto;
+    width: auto;
+    padding: 10px;
+    margin: 10px;
     margin-bottom: 50px;
-
-    background-color:#131313;
+    border-width: 5px;
+    border-radius: 10px;
+    background-color:#151515;
     
    
-    color: #131313;
-    transition: background-color, color 0.3s ease-in-out;
+    color: #151515;
+    transition: background-color, color 0.1s ease-in-out;
     
     
    
@@ -28,11 +40,14 @@
 
 .box:hover{
     background-color: #d5293d;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
     color: white;
 }
 
 .firsttext{
     font-size: 30px;
+    font-weight: 1000;
     margin-left: 20px;
+    
 }
+
